# usb-resolver

./: Cargo.toml  LICENSE  README.md  README_zh.md  device_config.json
examples/: discovery.rs
src/: lib.rs  main.rs
src/platform/: linux.rs  macos.rs  macos1.rs  mod.rs  windows.rs
