[package]
name = "usb-resolver"
version = "0.1.1"
edition = "2024"
description = "USB Resolver & Device Monitor"
authors = ["Leon <echo_ai@foxmail.com>"]
license = "MIT"
repository = "https://github.com/DoraCN/usb-resolver"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.10"
ratatui = "0.30.0"
crossterm = "0.29.0"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Security",
    "implement",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4"
mach = "0.3"
